Minor BlockMover cleanup/fixes